<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/ivTopPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cat" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/dm_task2_h_margin"
            android:layout_marginBottom="@dimen/dm_task2_v_margin"
            android:src="@drawable/ic_task2_photo_camera" />
    </FrameLayout>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:hint="@string/task2_title"
        android:textSize="@dimen/dm_task2_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin">

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task2_price"
            android:textSize="@dimen/dm_task2_text_size" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_task2_h_margin"
                android:hint="@string/task2_location"
                android:textSize="@dimen/dm_task2_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_task2_location" />
        </FrameLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:hint="@string/task2_description"
        android:textSize="@dimen/dm_task2_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etInventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task2_inventory"
            android:textSize="@dimen/dm_task2_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task2_weight"
            android:textSize="@dimen/dm_task2_text_size" />
    </LinearLayout>
</LinearLayout>