<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/color_task2_gray"
        android:padding="@dimen/dm_task2_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task2_photo"
            android:textSize="60dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_task2_photo_camera" />
    </FrameLayout>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/task2_title"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flPhoto" />


    <EditText
        android:id="@+id/etPrice"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:layout_marginStart="@dimen/dm_task2_h_margin"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:hint="@string/task2_price"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />


    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:layout_marginBottom="40dp"
        android:hint="@string/task2_location"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etPrice"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <ImageView
        android:id="@+id/ivLocationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dm_task2_h_margin"
        android:src="@drawable/ic_task2_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etLocation" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dm_task2_h_margin"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:hint="@string/task2_description"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintBottom_toTopOf="@id/etInventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrice" />


    <EditText
        android:id="@+id/etInventory"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:layout_marginStart="@dimen/dm_task2_h_margin"
        android:hint="@string/task2_inventory"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />


    <EditText
        android:id="@+id/etWeight"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dm_task2_v_margin"
        android:layout_marginEnd="@dimen/dm_task2_h_margin"
        android:hint="@string/task2_weight"
        android:textSize="@dimen/dm_task2_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>